# Complex-Wrinkle-Field-Decompoistion

./: .gitignore  CMakeLists.txt  CWF.h  CWFTypes.cpp  CWFTypes.h  CommonTools.cpp  CommonTools.h  ExtractIsoline.cpp  ExtractIsoline.h  KnoppelStripePatterns.cpp  KnoppelStripePatterns.h  LoadSaveIO.cpp  LoadSaveIO.h  PaintGeometry.cpp  PaintGeometry.h  README.md  Timer.h
Decomposition/: BaseMeshExtraction.cpp  BaseMeshExtraction.h  CWFDecomposition.cpp  CWFDecomposition.h
MeshLib/: Mesh.cpp  Mesh.h  types.h  utils.cpp  utils.h
Optimization/: LineSearch.cpp  LineSearch.h  Newton.cpp  Newton.h  ProjectedNewton.cpp  ProjectedNewton.h  TestGradHess.cpp  TestGradHess.h
TFWShell/: Quadrature.cpp  Quadrature.h  TFWShell.cpp  TFWShell.h
Upsampling/: BaseLoop.cpp  BaseLoop.h  ComplexLoop.cpp  ComplexLoop.h  StandardLoop.cpp  StandardLoop.h  Subdivision.cpp  Subdivision.h
app/: CMakeLists.txt
app/BasemeshExtractionGui/: CMakeLists.txt  main.cpp
app/CWFDecompositionGui/: CMakeLists.txt  main.cpp
app/CWFDecompositionGuiWithRest/: CMakeLists.txt  main.cpp
app/CWFUpsamplingGui/: CMakeLists.txt  main.cpp
data/bunny/: data.json  data_1.json  tmpAmp_0.txt  tmpAmp_81.txt  tmpOmega_0.txt  tmpOmega_81.txt  tmpUnitZval_0.txt  tmpZval_0.txt  tmpZval_81.txt
data/shearingRect/: data.json
data/shearingRect/coaseRectTFT/: Aeq1.txt  Aineq1.txt  Beq0.txt  Bineq0.txt  H1.txt  config0.txt  config1.txt  data.json  dphi.csv  dphi.txt  q1.txt  restCoarseRect_WTF.json  restCoarseRect_ampList_simulated_0.txt  restCoarseRect_cur_phi.txt  (+9 more)
data/shearingRectTFW/: amp.txt  omega.txt
(+20014 files in other folders)
